[package]
name = "isrbe"
version = "0.1.0"
authors = ["Michal Mauser <michal.mauser@zeitgeistmovement.cz>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
mysql = "*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "serve"]